# pykochbuch

./: .gitignore  cookbook.db  main.py  pykochbuch-0.1.0-py3-none-any.whl  pykochbuch_alireza_2026-1.0.0-py3-none-any.whl  pyproject.toml  recipes.json  recipes_all.db  recipes_selected.db  recipes_selected.json  requirements.txt  shopping_list_20260404.txt
src/pykochbuch/: all_recipes.json  gui_tkinter.py  ingredient.py  recipe.py  recipe_book.py  shopping_list.py  storage.py  unit.py
src/pykochbuch/models/: __init__.py  ingredient.py  recipe.py
src/pykochbuch/storage/: __init__.py  base.py  json_store.py  memory_store.py  serialization.py  sqlite_store.py
tests/: pyproject.toml  test_ingredient.py  test_recipe.py  test_recipe_book.py  test_shopping_list.py  test_storage.py  test_unit.py
