[project]
name = "pykochbuch-alireza-2026"
version = "1.0.0"
description = "A simple cookbook project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# THIS PART IS CRITICAL: It tells Python where the code is
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]